# doc_query

./: .gitignore  Dockerfile  README.md  alembic.ini  config.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 00b599e5ab56_add_pg_vector.py  27abe6aacd99_added_embedding_column.py  527ef7667b4e_added_hash_field_for_normalized_text.py  5a330beaa413_added_table_document_chunk.py  8cc690ebdb7b_rename_ingestion_metrics.py  9f4d7ba36f24_init_schema.py  c22fe4b0597b_add_table_document_content.py  e1050903cbde_added_table_document_chunk.py
app/: lifespan.py  main.py  settings.py
app/api/: dependencies.py
app/api/routers/: __init__.py  chunk.py  dataset.py  document.py  health.py
app/clients/: arq.py
app/db/: base.py  session.py
app/models/: __init__.py  dataset.py  document.py  ingestion_metric.py  job.py
app/repositories/: chunk.py  dataset.py  document.py  document_chunk.py  document_content.py  ingestion_metrics.py  job.py
app/schemas/: chunk.py  config.py  datasets.py  documents.py
app/services/: chunk.py  dataset.py  document.py  document_chunker.py  document_job.py  document_parser.py  embedding_provider.py  ingestion_metrics.py  job.py  job_worker.py
app/workers/: arq_tasks.py  arq_worker.py  worker.py
